# kafka-playground

./: LICENSE  Makefile  README.md  docker-compose.yaml
kafka-sumo/: .gitignore  Dockerfile  pyproject.toml
kafka-sumo/kafka_sumo/: app.py  config.py  feed.py  feeds.py  protobuf.py  traffic_light.py  vehicle.py
proto/: sumo.proto
sumo/: map.add.xml  map.rou.xml  map.sumocfg
sumo-metrics/: Dockerfile  pom.xml
sumo-metrics/src/main/java/com/github/danielrenes/sumo/metrics/: SumoMetricsApplication.java
sumo-metrics/src/main/java/com/github/danielrenes/sumo/metrics/configuration/: KafkaStreamConfiguration.java
sumo-metrics/src/main/java/com/github/danielrenes/sumo/metrics/controller/: TrafficLightMetricsController.java  VehicleMetricsController.java
sumo-metrics/src/main/java/com/github/danielrenes/sumo/metrics/serialization/: AverageDeserializer.java  AverageSerde.java  AverageSerializer.java  ProtobufEnumDeserializer.java  ProtobufEnumSerde.java  ProtobufEnumSerializer.java  ProtobufMessageDeserializer.java  ProtobufMessageSerde.java  ProtobufMessageSerializer.java
sumo-metrics/src/main/java/com/github/danielrenes/sumo/metrics/streams/: TrafficLightMetricsStreams.java  VehicleMetricsStreams.java
sumo-metrics/src/main/java/com/github/danielrenes/sumo/metrics/utils/: Average.java
sumo-metrics/src/main/resources/: application.properties
